switch to low quality svgs to appease stackblitz import issues

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,7 +2,7 @@
     <h2>{{ pageTitle }}<hr /></h2>
     <div class="contact-wrapper">
       <div class="image-wrapper">
-        <img src="../assets/img/png//contact.png" alt="image of person sticking a fork in a piece of pie" />
+        <img src="../assets/img/svg/contact.svg" alt="image of person sticking a fork in a piece of pie" />
       </div>
       <div class="form-wrapper">
         <h3>We'd Love to Hear from You</h3>
