--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,6 +1,6 @@
 <header class="site-header">
     <div class="site-header-wrapper">
-      <h1><a [routerLink]="['/']"><img src="./assets/img/png//logo.png" alt="Bethany's Pie Shop Logo" /></a></h1>
+      <h1><a [routerLink]="['/']"><img src="./assets/img/svg/logo.svg" alt="Bethany's Pie Shop Logo" /></a></h1>
       <nav>
         <ul>
           <li><a [routerLink]="['shop']">Shop</a></li>
@@ -10,7 +10,7 @@
       <div class="header-icons">
         <ul>
           <li class="cart-icon">
-            <a [routerLink]="['cart']"><img class="cart-img" src="./assets/img/png//cart-icon.png" alt="shopping cart icon"/></a>
+            <a [routerLink]="['cart']"><img class="cart-img" src="./assets/img/svg/cart-icon.svg" alt="shopping cart icon"/></a>
             <span *ngIf="cartCount()" class="cart-count">{{cartCount()}}</span>
           </li>
         </ul>
